feat: add some styles

--- a/index.html
+++ b/index.html
@@ -6,32 +6,35 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-<header>
-    <img class="header-logo" alt="header logo" src="assets/images/logo.svg">
-    <h1>THEYALOW</h1>
-    <nav>
-        <ul>
-            <li>ABOUT US</li>
-            <li>SERVICES</li>
-            <li>CONTACT</li>
-        </ul>
-    </nav>
-</header>
-<main>
-    <section>
-        <img class="icon" alt="icon" src="assets/images/icon1.svg">
-        <h2>BETTER DESIGN</h2>
-        <img class="icon" alt="icon" src="assets/images/icon2.svg">
-        <h2>CUSTOMIZE</h2>
-        <img class="icon" alt="icon" src="assets/images/icon3.svg">
-        <h2>IT'S FREE</h2>
-    </section>
-</main>
-<footer>
-    <hr>
-    <img class="footer-logo" alt="footer logo" src="assets/images/logo.svg">
-    <h1 class="footer-heading">THEYALOW</h1>
-</footer>
-
+<div class="wrapper">
+    <div class="text-wrapper">
+        <header>
+            <img class="header-logo" alt="header logo" src="assets/images/logo.svg">
+            <h1>THEYALOW</h1>
+            <nav>
+                <ul>
+                    <li>ABOUT US</li>
+                    <li>SERVICES</li>
+                    <li>CONTACT</li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section>
+                <img class="icon" alt="icon" src="assets/images/icon1.svg">
+                <h2>BETTER DESIGN</h2>
+                <img class="icon" alt="icon" src="assets/images/icon2.svg">
+                <h2>CUSTOMIZE</h2>
+                <img class="icon" alt="icon" src="assets/images/icon3.svg">
+                <h2>IT'S FREE</h2>
+            </section>
+        </main>
+        <footer>
+            <hr>
+            <img class="footer-logo" alt="footer logo" src="assets/images/logo.svg">
+            <h1 class="footer-heading">THEYALOW</h1>
+        </footer>
+    </div>
+</div>
 </body>
 </html>
