feat: add footer and bottom section styles

--- a/index.html
+++ b/index.html
@@ -4,37 +4,62 @@
     <meta charset="UTF-8">
     <title>Theyalow</title>
     <link href="style.css" rel="stylesheet">
+    <link href="fonts.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|PT+Sans|PT+Sans+Narrow:700&display=swap"
+          rel="stylesheet">
 </head>
 <body>
 <div class="wrapper">
-    <div class="text-wrapper">
-        <header>
-            <img class="header-logo" alt="header logo" src="assets/images/logo.svg">
-            <h1>THEYALOW</h1>
-            <nav>
+
+    <header>
+        <img class="header-logo" alt="header logo" src="assets/images/logo.svg">
+        <h1>THEYALOW</h1>
+        <nav>
+            <ul>
+                <li>ABOUT US</li>
+                <li>SERVICES</li>
+                <li>CONTACT</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <img class="icon" alt="icon" src="assets/images/icon1.svg">
+            <h2>BETTER DESIGN</h2>
+            <img class="icon" alt="icon" src="assets/images/icon2.svg">
+            <h2>CUSTOMIZE</h2>
+            <img class="icon" alt="icon" src="assets/images/icon3.svg">
+            <h2>IT'S FREE</h2>
+        </section>
+    </main>
+
+    <section class="devices">
+        <div class="text-wrapper">
+            <h1 class="devices-heading">Lorem ipsum dolor sit amet</h1>
+
+            <div class="devices-flex">
+                <div class="devices-pictures">
+                    <p class="free">Its 100% Free</p>
+                    <img src="assets/images/laptop.png" alt="computer picture">
+                    <img src="assets/images/ipad.png" alt="tablet picture">
+                    <img src="assets/images/phone.png" alt="phone picture">
+                </div>
                 <ul>
-                    <li>ABOUT US</li>
-                    <li>SERVICES</li>
-                    <li>CONTACT</li>
+                    <li>Sed ut perspiciatis unde omnis</li>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing</li>
+                    <li>Sed ut perspiciatis unde omnis</li>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing</li>
                 </ul>
-            </nav>
-        </header>
-        <main>
-            <section>
-                <img class="icon" alt="icon" src="assets/images/icon1.svg">
-                <h2>BETTER DESIGN</h2>
-                <img class="icon" alt="icon" src="assets/images/icon2.svg">
-                <h2>CUSTOMIZE</h2>
-                <img class="icon" alt="icon" src="assets/images/icon3.svg">
-                <h2>IT'S FREE</h2>
-            </section>
-        </main>
-        <footer>
-            <hr>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="text-wrapper">
             <img class="footer-logo" alt="footer logo" src="assets/images/logo.svg">
             <h1 class="footer-heading">THEYALOW</h1>
-        </footer>
-    </div>
+        </div>
+    </footer>
 </div>
 </body>
 </html>
