feat: add twitter data

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
           integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous"/>
     <link href="style.css" rel="stylesheet">
     <link href="fonts.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Asap|Open+Sans|PT+Sans|PT+Sans+Narrow:700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Asap|Open+Sans|PT+Sans|PT+Sans+Narrow:700&display=swap"
+          rel="stylesheet">
 </head>
 <body>
 <div class="wrapper">
@@ -45,6 +46,11 @@
                     <p class="twitts-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                         tempor incididunt ut</p>
                     <a class="plus_button" href="#"><img src="assets/images/plus_button.svg" alt="plus button"></a>
+                    <div class="twitts-data-wrapper">
+                        <p class="twitts-data">
+                        <span class="twitts-day">25</span><br>APRIL
+                        </p>
+                    </div>
                 </div>
                 <video class="twitter-video" poster="assets/images/twitter-ph.jpg"></video>
                 <div class="twitts_item twitts-img">
