fix: correct some styles with Perfect Pixel

--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
         <section class="video">
             <div class="text-wrapper">
                 <video poster="assets/images/video-ph.jpg"></video>
-                <h2 class="video-heading"><span class="yellow">The cool</span><br>
-                    The minimal</h2>
+                <hgroup class="video-heading">
+                    <h2 class="videoh-item1">The cool</h2>
+                    <h2 class="videoh-item2">The minimal</h2>
+                </hgroup>
+                <!--   <h2 class=" video-heading"><span class="yellow">The cool</span><br>
+                    The minimal</h2>-->
             </div>
             <div class="arrays">
                 <img src="assets/images/left-array.png" alt="left video array">
@@ -38,6 +42,28 @@
             </div>
         </section>
     </div>
+    <section class="advantages">
+        <div class="text-wrapper">
+            <div class="advantages-item-border">
+                <div class="advantages-item">
+                    <img class="advantages-icon" alt="icon" src="assets/images/ic1.svg">
+                    <h2 class="advantages-header">BETTER DESIGN</h2>
+                </div>
+            </div>
+            <div class="advantages-item-border">
+                <div class="advantages-item">
+                    <img class="advantages-icon" alt="icon" src="assets/images/ic2.svg">
+                    <h2 class="advantages-header">CUSTOMIZE</h2>
+                </div>
+            </div>
+            <div class="advantages-item-border">
+                <div class="advantages-item">
+                    <img class="advantages-icon" alt="icon" src="assets/images/ic3.svg">
+                    <h2 class="advantages-header">IT'S FREE</h2>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="twitter">
         <div class="text-wrapper">
             <h2 class="twitter-heading">Lorem ipsum dolor sit amet</h2>
@@ -48,7 +74,7 @@
                     <a class="plus_button" href="#"><img src="assets/images/plus_button.svg" alt="plus button"></a>
                     <div class="twitts-data-wrapper">
                         <p class="twitts-data">
-                        <span class="twitts-day">25</span><br>APRIL
+                            <span class="twitts-day">25</span><br>APRIL
                         </p>
                     </div>
                 </div>
@@ -61,29 +87,6 @@
             </section>
             <div class="twitter-slider">
                 <div class="twitter-subsluder"></div>
-            </div>
-        </div>
-    </section>
-
-    <section class="advantages">
-        <div class="text-wrapper">
-            <div class="advantages-item-border">
-                <div class="advantages-item">
-                    <img class="advantages-icon" alt="icon" src="assets/images/icon1.svg">
-                    <h2 class="advantages-header">BETTER DESIGN</h2>
-                </div>
-            </div>
-            <div class="advantages-item-border">
-                <div class="advantages-item">
-                    <img class="advantages-icon" alt="icon" src="assets/images/icon2.svg">
-                    <h2 class="advantages-header">CUSTOMIZE</h2>
-                </div>
-            </div>
-            <div class="advantages-item-border">
-                <div class="advantages-item">
-                    <img class="advantages-icon" alt="icon" src="assets/images/icon3.svg">
-                    <h2 class="advantages-header">IT'S FREE</h2>
-                </div>
             </div>
         </div>
     </section>
