--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
             <div class="devices-flex">
                 <div class="devices-pictures">
                     <p class="free">Its 100% Free</p>
-                    <img class="devices-pictures__item" src="assets/images/laptop.png" alt="computer picture">
-                    <img class="devices-pictures__item" src="assets/images/ipad.png" alt="tablet picture">
-                    <img class="devices-pictures__item" src="assets/images/phone.png" alt="phone picture">
+                    <img class="devices-pictures__item computer" src="assets/images/laptop.png" alt="computer picture">
+                    <img class="devices-pictures__item tablet" src="assets/images/ipad.png" alt="tablet picture">
+                    <img class="devices-pictures__item phone" src="assets/images/phone.png" alt="phone picture">
                 </div>
 
                 <ul>
