--- a/index.html
+++ b/index.html
@@ -19,11 +19,15 @@
                 <h1 class="header-heading">THEYALOW</h1>
             </div>
             <nav>
-                <ul>
-                    <li>ABOUT US</li>
-                    <li>SERVICES</li>
-                    <li>CONTACT</li>
-                </ul>
+                <div class="nav-wrapper">
+                    <div class="first-nav-wrapper"></div>
+                    <div class="second-nav-wrapper"></div>
+                    <ul class="nav-list">
+                        <li><img class="nav-logo" src="assets/images/nav-icon3.svg" alt="person logo">ABOUT US</li>
+                        <li><img class="nav-logo" src="assets/images/nav-icon2.svg" alt="fix logo">SERVICES</li>
+                        <li><img class="nav-logo" src="assets/images/nav-icon1.svg" alt="letter logo">CONTACT</li>
+                    </ul>
+                </div>
             </nav>
         </header>
         <section class="video">
@@ -33,8 +37,6 @@
                     <h2 class="videoh-item1">The cool</h2>
                     <h2 class="videoh-item2">The minimal</h2>
                 </hgroup>
-                <!--   <h2 class=" video-heading"><span class="yellow">The cool</span><br>
-                    The minimal</h2>-->
             </div>
             <div class="arrays">
                 <img src="assets/images/left-array.png" alt="left video array">
