fix: correct to PP

--- a/index.html
+++ b/index.html
@@ -47,21 +47,21 @@
     <section class="advantages">
         <div class="text-wrapper">
             <div class="advantages-item-border">
-                <div class="advantages-item">
+                <div class="advantages-item design">
                     <img class="advantages-icon" alt="icon" src="assets/images/ic1.svg">
                     <h2 class="advantages-header">BETTER DESIGN</h2>
                 </div>
             </div>
             <div class="advantages-item-border">
-                <div class="advantages-item">
+                <div class="advantages-item custom">
                     <img class="advantages-icon" alt="icon" src="assets/images/ic2.svg">
-                    <h2 class="advantages-header">CUSTOMIZE</h2>
+                    <h2 class="advantages-header">CUSTOMISE</h2>
                 </div>
             </div>
             <div class="advantages-item-border">
-                <div class="advantages-item">
+                <div class="advantages-item itfree">
                     <img class="advantages-icon" alt="icon" src="assets/images/ic3.svg">
-                    <h2 class="advantages-header">IT'S FREE</h2>
+                    <h2 class="advantages-header">ITS FREE</h2>
                 </div>
             </div>
         </div>
