feat: add video's buttons

--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
         </header>
         <section class="video">
             <div class="text-wrapper">
-                <video poster="assets/images/video-ph.jpg"></video>
+                <div class="video-wrapper">
+                    <a class="play-icon" href="#"><img src="assets/images/play-icon.svg" alt="play icon"></a>
+                    <a class="sound-icon" href="#"><img src="assets/images/sound-icon.svg" alt="sound icon"></a>
+                    <a class="start-icon" href="#"><img src="assets/images/start-icon.svg" alt="start icon"></a>
+                    <video poster="assets/images/video-ph.jpg"></video>
+                </div>
                 <hgroup class="video-heading">
                     <h2 class="videoh-item1">The cool</h2>
                     <h2 class="videoh-item2">The minimal</h2>
