feat: add video's slider

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                     <a class="play-icon" href="#"><img src="assets/images/play-icon.svg" alt="play icon"></a>
                     <a class="sound-icon" href="#"><img src="assets/images/sound-icon.svg" alt="sound icon"></a>
                     <a class="start-icon" href="#"><img src="assets/images/start-icon.svg" alt="start icon"></a>
+                    <div class="small-slider">
+                        <div class="small-subslider"></div>
+                    </div>
                     <video poster="assets/images/video-ph.jpg"></video>
                 </div>
                 <hgroup class="video-heading">
