feat: add twitts video slider

--- a/index.html
+++ b/index.html
@@ -88,7 +88,10 @@
                         </p>
                     </div>
                 </div>
-                <video class="twitter-video" poster="assets/images/twitter-ph.jpg"></video>
+                <div class="video-wrapper">
+                    <a class="twit-play" href="#"><img src="assets/images/twit-play.svg" alt="play icon"></a>
+                    <video class="twitter-video" poster="assets/images/twitter-ph.jpg"></video>
+                </div>
                 <div class="twitts_item twitts-img">
                     <img class="twitter-icon" src="assets/images/twitter-icon.svg" alt="twitter icon">
                     <a class="plus_button" href="#"><img src="assets/images/plus_button.svg" alt="plus button"></a>
